feat: user groups is now an array of strings
