# priv/static/swagger.json
@@ -589,7 +589,7 @@
         "groups": {
           "type": "array",
           "items": {
-            "$ref": "#/definitions/Group"
+            "type": "string"
           }
         },
         "email": {
@@ -630,7 +630,7 @@
         "groups": {
           "type": "array",
           "items": {
-            "$ref": "#/definitions/Group"
+            "type": "string"
           }
         },
         "full_name": {
@@ -677,7 +677,7 @@
         "groups": {
           "type": "array",
           "items": {
-            "$ref": "#/definitions/Group"
+            "type": "string"
           }
         },
         "email": {
@@ -740,7 +740,7 @@
         "groups": {
           "type": "array",
           "items": {
-            "$ref": "#/definitions/Group"
+            "type": "string"
           }
         },
         "full_name": {
@@ -758,10 +758,7 @@
         "is_admin": false,
         "id": 123,
         "groups": [
-          {
-            "name": "group1",
-            "id": 321
-          }
+          "group1"
         ],
         "full_name": "My User",
         "email": "some@email.com"
